# un-voting-health-analysis

./: LICENSE  README.md  UPLOAD_ORDER.txt  pyproject.toml  requirements.txt
src/: generate_synthetic_data.py  un_ga_global_health_analysis.py
